5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1637_2445.log
== TEST (2019-04-11 10:27:30) 
-- CODE:
caso = input("Qual caso? (C/F)")
cel = (5/9)* (f - 32)
f = 3*c + 32
if(caso == (C).upper()):
	f = float(input("qual a temperatura? "))
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	print(round(f, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    cel = (5/9)* (f - 32)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:28:11) 
-- CODE:
caso = input("Qual caso? (C/F)")
f = 3*c + 32
cel = (5/9)* (f - 32)
if(caso == (C).upper()):
	f = float(input("qual a temperatura? "))
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	print(round(f, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    f = 3*c + 32
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:28:45) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == (C).upper()):
	f = float(input("qual a temperatura? "))
	cel = (5/9)* (f - 32)
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = 3*c + 32
	print(round(f, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(caso == (C).upper()):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:19) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == (c).upper()):
	f = float(input("qual a temperatura? "))
	cel = (5/9)* (f - 32)
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = 3*c + 32
	print(round(f, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(caso == (c).upper()):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:27) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == (c).upper()):
	f = float(input("qual a temperatura? "))
	cel = (5/9)* (f - 32)
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = 3*c + 32
	print(round(f, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(caso == (c).upper()):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:58) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == "c".upper()):
	f = float(input("qual a temperatura? "))
	cel = (5/9)* (f - 32)
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = 3*c + 32
	print(round(f, 2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:32:43) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == "c".upper()):
	f = float(input("qual a temperatura? "))
	cel = (5/9)* (f - 32)
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = 3*c + 32
	print(round(f, 2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:33:57) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == "c".upper()):
	f = float(input("qual a temperatura? "))
	cel = ((5)* (f - 32))/9
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = 3*c + 32
	print(round(f, 2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:19) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == "c".upper()):
	f = float(input("qual a temperatura? "))
	cel = ((5)* (f - 32))/9
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = 3*c + 32
	print(round(f, 2))
	

-- EXECUTION TIME:
0.170305
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
992.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:43:28) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == "c".upper()):
	f = float(input("qual a temperatura? "))
	cel = ((5)* (f - 32))/9
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = ((9/5)*c) + 32
	print(round(f, 2))
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:24) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == "c".upper()):
	f = float(input("qual a temperatura? "))
	cel = (f*(9/5)) + 32
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = ((9/5)*c) + 32
	print(round(f, 2))
	

-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:47:09) 
-- CODE:
caso = input("Qual caso? (C/F)")

if(caso == "c".upper()):
	f = float(input("qual a temperatura? "))
	cel = (f*(9/5)) + 32
	print(round(cel, 2))
	
else:
	c = float(input("qual a temperatura? "))
	f = (5/9)* (c - 32)
	print(round(f, 2))
	

-- EXECUTION TIME:
0.197549
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
